# DUET

./: .gitignore  README.md  image.py  pyproject.toml  tracking.py  train.py
config/: image.example.yaml  infra.example.yaml
docs/: modal_setup.md  openrouter.md  profiling.md
duet/: config.py
duet/profiling/: __init__.py  metrics.py
duet/training/: profile_entry.py  profile_patch.py  reward.py  train_grpo.py
notebooks/: 02_profiling.ipynb  Predictor_Week_2.ipynb
scripts/: bootstrap.sh  verify_image.py
