[project]
name = "duet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mlflow==3.12.0",
    "modal>=1.4.3",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.27.0",
]

[dependency-groups]
dev = [
    "openrouter>=0.9.1",
]
